--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "tsc",
     "start": "tsc --watch "
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^20.14.5"
+  },
   "dependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.4",
     "tsc": "^2.0.4",
     "typescript": "^5.4.5"
   }
