--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noEmit && esbuild src/index.ts --bundle --outfile=build/index.js --format=iife --target=es2020",
     "start": "tsc --watch "
   },
   "devDependencies": {
-    "@types/chrome": "^0.1.24"
+    "@types/chrome": "^0.1.24",
+    "esbuild": "^0.23.0"
   },
   "dependencies": {
     "tsc": "^2.0.4",
