feat: cross browser support and refinements
added cross browser support for chrome/firefox-based browsers
edited build commands to have releases show in github
fixed various type errors and configs

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ build
 dist-ssr
 *.local
 
+# Build artifacts and releases
+releases/
+*.zip
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
