--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -1,5 +1,4 @@
 {
-    // Comments are accepted in the manifest, even though it is JSON.
     "manifest_version": 3,
     "name": "Git buster",
     "description": "More infos on gitlab mr list",
@@ -9,19 +8,25 @@
         "48": "logo/logo-48.png",
         "128": "logo/logo-128.png"
     },
-    "options_page": "settings/settings.html",
+    "options_ui": {
+        "page": "settings/settings.html",
+        "open_in_tab": true
+    },
     "action": {
         "default_title": "Git buster",
         "default_popup": "popup/popup.html"
     },
     "permissions": [
-        "storage"
+        "storage",
+        "activeTab"
     ],
     "host_permissions": [
-        "*://*/*"
+        "http://*/*",
+        "https://*/*"
     ],
     "content_scripts": [{
         "js": ["build/index.js"],
-        "matches": ["<all_urls>"]
+        "matches": ["http://*/*", "https://*/*"],
+        "run_at": "document_end"
     }]
 }
