--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc --noEmit && esbuild src/index.ts --bundle --outfile=build/index.js --format=iife --target=es2020",
-    "dev": "tsc --noEmit --watch & esbuild src/index.ts --bundle --outfile=build/index.js --format=iife --target=es2020 --watch"
+    "build": "esbuild src/index.ts --bundle --outfile=build/index.js --format=iife --target=es2020 --jsx=transform --jsx-factory=h --jsx-fragment=Fragment --define:global=globalThis",
+    "dev": "esbuild src/index.ts --bundle --outfile=build/index.js --format=iife --target=es2020 --jsx=transform --jsx-factory=h --jsx-fragment=Fragment --define:global=globalThis --watch",
+    "build:firefox": "yarn build && node scripts/build-firefox.cjs",
+    "build:chrome": "yarn build && node scripts/build-chrome.cjs",
+    "build:all": "rm -rf build/ releases/ && yarn build:firefox && yarn build:chrome"
   },
   "devDependencies": {
     "@types/chrome": "^0.1.24",
-    "esbuild": "^0.23.0"
+    "esbuild": "^0.23.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "preact": "^10.23.2",
-    "tsc": "^2.0.4",
-    "typescript": "^5.4.5"
+    "preact": "^10.23.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
