--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,29 +2,26 @@
   "compilerOptions": {
     "outDir": "./build",
     "rootDir": "./src",
-    "target": "ES6",
-    "useDefineForClassFields": true,
+    "target": "ES2019",
     "module": "commonjs",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2019", "DOM"],
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    // "moduleResolution": "bundler",
+    
     "resolveJsonModule": true,
     "isolatedModules": true,
 
-    /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "jsx": "react",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment"
   },
   "include": ["src"],
   "exclude": [
     "tests",
-    "build",
+    "build", 
     "node_modules"
   ]
 }
